[tool.poetry]
name = "snakebase-auth"
version = "0.1.0"
description = ""
authors = ["Bartosz 'b4rti' Gorol <bartgorol@t-online.de>"]
readme = "README.md"
packages = [{include = "snakebase_auth"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
sqlmodel = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
